Fixed word spacing

--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,6 @@ a {
   color: #ECEFF4;
 }
 
-h6 {
-  word-spacing: -3px;
-  letter-spacing: 0px;
-}
-
 #Container {
   display: flex;
   justify-content: center;
